--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "async": "~0.7.0",
     "ds-store": "~0.1.4",
-    "fs-xattr": "~0.1.4",
+    "fs-xattr": "Ivshti/fs-xattr,
     "image-size": "~0.2.3",
     "minimist": "~0.0.8",
     "repeat-string": "^1.5.2",
